idf_component_register(SRCS
                            "wrappers/task.cpp"
                            "wrappers/netif.cpp"
                            "wrappers/eventgroup.cpp"
                            "wrappers/nvs.cpp"
                            "wifi.cpp"
                            "smartconfig.cpp"
                            "main.cpp"
                    INCLUDE_DIRS ".")
